:bug: fixed dialog overflow issue / removed dialog box shadow

--- a/styles/index.css
+++ b/styles/index.css
@@ -198,8 +198,14 @@ section {
   }
 }
 
+.dialog {
+  overflow: clip;
+}
+
 .dialog article {
   background: transparent;
+  box-shadow: none;
+  overflow: clip;
   font-size: var(--fs-800);
   font-weight: bold;
   text-align: center;
